kubernetes/yamls/application/ingress-notls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kik
  namespace: kik
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: susi-kikbot.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: kik
          servicePort: 80
