kubernetes/yamls/application/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kik
  namespace: kik
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - susi-kikbot.tk
    secretName: kik-tls
  rules:
  - host: susi-kikbot.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: kik
          servicePort: 80
